@@ -421,7 +421,7 @@ class PackageArchitecture(collections.MutableSet):
 
     def extend(self, value):
         if isinstance(value, str):
-            for i in re.split('\s', value.strip()):
+            for i in re.split(r'\s', value.strip()):
                 self.add(i)
         else:
             raise RuntimeError
@@ -493,7 +493,7 @@ class PackageRelation(list):
 
     def extend(self, value, override_arches=None):
         if isinstance(value, str):
-            value = (j.strip() for j in re.split(',', value.strip()))
+            value = (j.strip() for j in re.split(r',', value.strip()))
         for i in value:
             self.append(i, override_arches)
 
@@ -529,7 +529,7 @@ class PackageRelationGroup(list):
 
     def extend(self, value, override_arches=None):
         if isinstance(value, str):
-            value = (j.strip() for j in re.split('\|', value.strip()))
+            value = (j.strip() for j in re.split(r'\|', value.strip()))
         for i in value:
             self.append(i, override_arches)
 
@@ -612,11 +612,11 @@ class PackageRelationEntry(object):
             self.operator = None
         self.version = match[2]
         if match[3] is not None:
-            self.arches = re.split('\s+', match[3])
+            self.arches = re.split(r'\s+', match[3])
         else:
             self.arches = []
         if match[4] is not None:
-            self.restrictions = re.split('\s+', match[4])
+            self.restrictions = re.split(r'\s+', match[4])
         else:
             self.restrictions = []
 
