@@ -8,6 +8,7 @@ linux (4.19~rc3-1~exp2) UNRELEASED; urgency=medium
   * debian/control: Build-depend on libnuma-dev for linux-perf on all arches
   * debian/control: Remove "cross" from profiles for build-dep on libssl-dev
   * [mips64*] debian/control: Build-depend on gcc-multilib for linux-perf
+  * debian/lib/python: Use raw strings for all regexes
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Sep 2018 22:25:53 +0100
 
